2001-05-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.4 revision 00.

2001-04-27  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* lisp/gnus-art.el (gnus-article-mime-edit-exit): Set buffer to
	`gnus-article-buffer' just before `gnus-article-prepare-display' is
	called.
	(gnus-article-mime-edit-article-setup): Ditto.
	(gnus-article-prepare-display): Don't bind `buffer-read-only'
	because of `inhibit-read-only'; don't set the value of
	`gnus-article-current-summary' here; delete all extents or overlays
	and clear the value of `gnus-button-marker-list' in advance; make
	it to run in `gnus-article-buffer'.
	(gnus-article-prepare): Make it to run in `gnus-article-buffer'.
	(article-toggle-headers): Don't bind `buffer-read-only' because of
	`inhibit-read-only'.
	(article-hide-headers): Ditto.

2001-04-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.3 revision 00.

2001-04-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.2 revision 00.

2001-04-16  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el: T-gnus 6.15.1 revision 00.

2001-04-13  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/lpath.el: Fbind `xml-parse-region' for XEmacsen and old FSF
	Emacsen; don't bind `mh-lib-progs'.

2001-04-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el: Enclose w3m stuff with `eval-and-compile';
	bind `w3m-work-buffer-name' and `w3m-retrieve' when compiling.

2001-04-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 10.

2001-04-03  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition: Follow changes in
	asahi.com.
	(nnshimbun-asahi-get-headers): Ditto.
	(nnshimbun-retrieve-url): Use `w3m-retrieve' if it is available.

2001-04-02  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-inews-yank-articles): Make it to work with